[package]
name = "smr-benchmark"
version = "0.1.0"
authors = ["authors"]
edition = "2021"
description = "SMR Benchmark: A Microbenchmark Suite for Concurrent Safe Memory Reclamation Schemes"
repository = "https://github.com/kaist-cp/smr-benchmark"
readme = "README.md"

[dependencies]
bitflags = "2.5"
cfg-if = "1.0"
clap = { version = "4.5.4", features = ["derive", "string"] }
crossbeam-utils = "0.8"
csv = "1.3.0"
rand = "0.8"
typenum = "1.17"
num = "0.4.3"

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-simple]
inherits = "release"
debug = true
lto = false
codegen-units = 16
